Get rid of `abstract_actor::m_link` member
Links now use attachables, just like monitors do; relates #180.

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -35,6 +35,7 @@ set (LIBCAF_CORE_SRCS
      src/channel.cpp
      src/continue_helper.cpp
      src/decorated_tuple.cpp
+     src/default_attachable.cpp
      src/demangle.cpp
      src/deserializer.cpp
      src/duration.cpp
