Fix `then` and `await`, close #143
Synchronous response message are handled properly and patterns are no longer
extended automatically. The extension caused CAF to assume `on(any_vals,
arg_match)` before any functor given to `then` or `await`. This feature is
neither documented nor is it the expected behavior from a users point of view.
This could potentially break code, but the broken code shouldn't be valid in
the first place...

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -29,6 +29,7 @@ set (LIBCAF_CORE_SRCS
      src/attachable.cpp
      src/behavior.cpp
      src/behavior_stack.cpp
+     src/behavior_impl.cpp
      src/binary_deserializer.cpp
      src/binary_serializer.cpp
      src/blocking_actor.cpp
