--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -210,12 +210,12 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/libcaf_opencl/caf)
 endif()
 
 # path to probe-event headers (if submodule is loaded)
-if(EXISTS "${CMAKE_SOURCE_DIR}/probe-event/caf")
+if(EXISTS "${CMAKE_SOURCE_DIR}/libcaf_probe_event/caf")
   set(LIBCAF_INCLUDE_DIRS
-      ${CMAKE_SOURCE_DIR}/probe-event/ ${LIBCAF_INCLUDE_DIRS})
+      ${CMAKE_SOURCE_DIR}/libcaf_probe_event/ ${LIBCAF_INCLUDE_DIRS})
   # make files from probe-event show up in IDE
   file(GLOB PROBE_EVENTS_HDRS
-       "${CMAKE_SOURCE_DIR}/probe-event/caf/probe_event/*.hpp")
+       "${CMAKE_SOURCE_DIR}/libcaf_probe_event/caf/probe_event/*.hpp")
   add_custom_target(caf_probe_events_dummy SOURCES ${PROBE_EVENTS_HDRS})
   set(CAF_HAS_PROBE_EVENTS yes)
 endif()
@@ -309,7 +309,7 @@ if(NOT CAF_NO_PROBE AND EXISTS "${CMAKE_SOURCE_DIR}/probe/caf/")
     set(CAF_NO_PROBE yes)
   else()
     message(STATUS "Enter subdirectory probe")
-    add_subdirectory(probe)
+    add_subdirectory(libcaf_probe)
     if(CAF_BUILD_STATIC_ONLY OR CAF_BUILD_STATIC)
       add_dependencies(libcaf_probeStatic libcaf_ioStatic)
     endif()
