Rename shell binary to cash, relates #164

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -295,7 +295,7 @@ if(NOT CAF_NO_SHELL AND EXISTS "${CMAKE_SOURCE_DIR}/shell/caf/")
   else()
     message(STATUS "Enter subdirectory shell")
     add_subdirectory(shell)
-    add_dependencies(shell libcaf_io)
+    add_dependencies(cash libcaf_io)
     set(CAF_NO_SHELL no)
   endif()
 else()
