--- a/.gitmodules
+++ b/.gitmodules
@@ -1,18 +1,15 @@
 [submodule "benchmarks"]
 	path = benchmarks
 	url = https://github.com/actor-framework/benchmarks.git
-[submodule "probe-event"]
-	path = libcaf_probe_event
-	url = https://github.com/actor-framework/probe-event.git
 [submodule "nexus"]
 	path = nexus
 	url = https://github.com/actor-framework/nexus.git
-[submodule "probe"]
-	path = libcaf_probe
-	url = https://github.com/actor-framework/probe.git
 [submodule "shell"]
 	path = shell
 	url = https://github.com/actor-framework/shell
 [submodule "opencl"]
 	path = libcaf_opencl
 	url = https://github.com/actor-framework/opencl.git
+[submodule "libcaf_riac"]
+	path = libcaf_riac
+	url = git@github.com:actor-framework/riac.git
