Make preprocessor log level numeric.
CMake treats quotes in add_definitions(..) as literals. This resulted in an
invalid definition of the log level as a character string as opposed to a
numeric value.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -156,7 +156,7 @@ set(LD_FLAGS ${CMAKE_LD_LIBS})
 ################################################################################
 
 if(CAF_LOG_LEVEL)
-  add_definitions(-DCAF_LOG_LEVEL="${CAF_LOG_LEVEL}")
+  add_definitions(-DCAF_LOG_LEVEL=${CAF_LOG_LEVEL})
 endif()
 
 if(CAF_ENABLE_RUNTIME_CHECKS)
