Properly split scheduler implementation

--- a/libcaf_core/CMakeLists.txt
+++ b/libcaf_core/CMakeLists.txt
@@ -11,6 +11,7 @@ file(GLOB LIBCAF_CORE_HDRS "caf/*.hpp"
                            "caf/detail/*.hpp"
                            "caf/policy/*.hpp"
                            "caf/mixin/*.hpp"
+                           "caf/scheduler/*.hpp"
                            "cppa/*.hpp")
 
 # list cpp files excluding platform-dependent files
@@ -18,6 +19,7 @@ set (LIBCAF_CORE_SRCS
      src/abstract_actor.cpp
      src/abstract_channel.cpp
      src/abstract_group.cpp
+     src/abstract_coordinator.cpp
      src/actor.cpp
      src/actor_addr.cpp
      src/actor_companion.cpp
@@ -62,8 +64,8 @@ set (LIBCAF_CORE_SRCS
      src/response_promise.cpp
      src/resumable.cpp
      src/ripemd_160.cpp
-     src/scheduler.cpp
      src/scoped_actor.cpp
+     src/set_scheduler.cpp
      src/serializer.cpp
      src/shared_spinlock.cpp
      src/shutdown.cpp
