Add simple HTTP broker example

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -35,7 +35,8 @@ add(typed_calculator message_passing)
 add(distributed_calculator remote_actors)
 add(group_server remote_actors)
 add(group_chat remote_actors)
-add(simple_broker remote_actors)
+add(simple_broker brokers)
+add(simple_http_broker brokers)
 
 if(NOT CAF_NO_PROTOBUF_EXAMPLES)
   find_package(Protobuf)
@@ -44,7 +45,7 @@ if(NOT CAF_NO_PROTOBUF_EXAMPLES)
     include_directories(${PROTOBUF_INCLUDE_DIR})
     # add binary dir as include path as generated headers will be located there
     include_directories(${CMAKE_CURRENT_BINARY_DIR})
-    add_executable(protobuf_broker remote_actors/protobuf_broker.cpp ${ProtoSources})
+    add_executable(protobuf_broker brokers/protobuf_broker.cpp ${ProtoSources})
     target_link_libraries(protobuf_broker ${CMAKE_DL_LIBS} ${LIBCAF_LIBRARIES} ${PTHREAD_LIBRARIES} ${PROTOBUF_LIBRARIES})
     add_dependencies(protobuf_broker all_examples)
   endif(PROTOBUF_FOUND AND PROTOBUF_PROTOC_EXECUTABLE)
