Add files for thread compatibility with RIOT
These headers implement thread, mutex and condition_variable
based on RIOT thread and mutex. A new configure option allows
a build for RIOT and uses these implementations instead of the
STL ones.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -253,6 +253,8 @@ endif()
 
 if(CAF_FOR_RIOT)
   add_definitions(-D__RIOTBUILD_FLAG)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
+  set(LD_FLAGS "${LD_FLAGS} -m32")
 endif()
 
 
@@ -348,6 +350,12 @@ if (CAF_USE_ASIO)
   endif()
 endif()
 
+# include files to build for RIOT
+if(CAF_FOR_RIOT)
+  include_directories("${RIOT_BASE_DIR}/sys/include/.")
+  include_directories("${RIOT_BASE_DIR}/core/include/.")
+  include_directories("${RIOT_BASE_DIR}/cpu/native/include/.")
+endif()
 
 ################################################################################
 #                               add subprojects                                #
