Use HTTPS URL for all submodules
Since the SSH URL will not work for users that do not have a GitHub account, we
only use the HTTPS version.

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/actor-framework/opencl.git
 [submodule "libcaf_riac"]
 	path = libcaf_riac
-	url = git@github.com:actor-framework/riac.git
+	url = https://github.com/actor-framework/riac.git
 [submodule "cash"]
 	path = cash
-	url = git@github.com:actor-framework/cash.git
+	url = https://github.com/actor-framework/cash.git
