--- a/Doxyfile.in
+++ b/Doxyfile.in
@@ -37,7 +37,7 @@ PROJECT_NAME           = libcaf
 # This could be handy for archiving the generated documentation or 
 # if some version control system is used.
 
-PROJECT_NUMBER         = @VERSION@
+PROJECT_NUMBER         = @CAF_VERSION@
 
 # The OUTPUT_DIRECTORY tag is used to specify the (relative or absolute) 
 # base path where the generated documentation will be put. 
