Fix uninstall command for some CMake versions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -190,7 +190,7 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake/cmake_uninstall.cmake.in"
                IMMEDIATE @ONLY)
 # add uninstall target
 add_custom_target(uninstall
-                  COMMAND "${CMAKE_COMMAND} -P"
+                  COMMAND "${CMAKE_COMMAND}" -P
                   "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")
 
 
