--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -31,3 +31,4 @@ add_unit_test(sync_send)
 add_unit_test(broker)
 add_unit_test(remote_actor ping_pong.cpp)
 add_unit_test(typed_remote_actor)
+add_unit_test(optional)
