--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -20,6 +20,7 @@ add_unit_test(variant)
 add_unit_test(atom)
 add_unit_test(metaprogramming)
 add_unit_test(intrusive_containers)
+add_unit_test(match)
 add_unit_test(serialization)
 add_unit_test(uniform_type)
 add_unit_test(fixed_vector)
