--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -26,6 +26,12 @@ add_unit_test(uniform_type)
 add_unit_test(fixed_vector)
 add_unit_test(intrusive_ptr)
 add_unit_test(spawn ping_pong.cpp)
+add_unit_test(simple_reply_response)
+add_unit_test(serial_reply)
+add_unit_test(or_else)
+add_unit_test(continuation)
+add_unit_test(constructor_attach)
+add_unit_test(custom_exception_handler)
 add_unit_test(typed_spawn)
 add_unit_test(local_group)
 add_unit_test(sync_send)
@@ -33,3 +39,4 @@ add_unit_test(broker)
 add_unit_test(remote_actor ping_pong.cpp)
 add_unit_test(typed_remote_actor)
 add_unit_test(optional)
+add_unit_test(fixed_stack_actor)
