--- a/libcaf_io/CMakeLists.txt
+++ b/libcaf_io/CMakeLists.txt
@@ -15,6 +15,7 @@ set (LIBCAF_IO_SRCS
      src/default_multiplexer.cpp
      src/publish.cpp
      src/publish_local_groups.cpp
+     src/remote_actor.cpp
      src/remote_actor_proxy.cpp
      src/remote_group.cpp
      src/manager.cpp
