--- a/unit_testing/CMakeLists.txt
+++ b/unit_testing/CMakeLists.txt
@@ -33,6 +33,7 @@ add_unit_test(continuation)
 add_unit_test(constructor_attach)
 add_unit_test(custom_exception_handler)
 add_unit_test(typed_spawn)
+add_unit_test(actor_lifetime)
 add_unit_test(local_group)
 add_unit_test(sync_send)
 add_unit_test(broker)
